<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/infoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/info" />

    <Button
        android:id="@+id/testsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testing" />

    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/exit" />


</LinearLayout>