<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/testBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">


    <TextView
        android:id="@+id/number"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textSize="28sp" />


    <View
        android:id="@+id/background"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:visibility="gone" />

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/leftButton"
            style="?android:buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/rightButton"
            style="?android:buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/holo_red_light" />

    </android.support.v7.widget.ButtonBarLayout>


</RelativeLayout>